build fix, minor things

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,9 @@
     <!-- The first thing in any HTML file should be the charset -->
     <meta charset="utf-8">
 
+    <!-- Fixes loading chunk failure errors -->
+    <base href="/" />
+
     <!-- Make the page mobile compatible -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
